# nelderr

./: README.md  nelderr.sln  Плотников,Ярахтина,Колобков отчет.docx
NelderMeadGUI/: CMakeLists.txt  mainwindow.cpp
NelderMeadGUI/include/: NelderMead.h
NelderMeadGUI/lib/: NelderMeadOptimizer.lib
NelderMeadGUI/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
NelderMeadTest/: NelderMeadTest.cpp  NelderMeadTest.vcxproj  NelderMeadTest.vcxproj.filters
Sample-Test1/: Sample-Test1.vcxproj  test.cpp
nelderr/: NelderMead.cpp  NelderMead.h  nelderr.vcxproj  nelderr.vcxproj.filters
